src/snapshots/jj_change_viewer__tui__tests__tui_snapshot_comment_popup.snap
---
source: src/tui.rs
expression: "render_tui_text(&session, &mode, 100, 24)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│• ▾ src 0/1                               ││src/app.rs  +1 -1                                     │
│  • mod     app.rs                        ││@@ -1 +1 @@                                           │
│                                          ││    1 - old                                           │
│                                          ││    1 + new                                           │
│                                          ││                                                      │
│                                          ││                                                      │
│              ┌comment─────────────────────────────────────────────────────────────┐              │
│              │Looks good                                                          │              │
│              │except this line                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              │                                                                    │              │
│              └────────────────────────────────────────────────────────────────────┘              │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
1 files (0/1 viewed, 0 generated/noisy), +1/-1, 0 comments
new comment · enter newline · ctrl-s save · esc cancel
