src/snapshots/jj_change_viewer__tui__tests__tui_snapshot_selected_and_range_styles.snap
---
source: src/tui.rs
expression: "render_tui_style_runs(&session, &Mode::Normal, 80, 14)"
---
y=01 x=01..01 fg=Some(Green) bg=Some(Reset) add=NONE sub=NONE text="•"
y=01 x=05..07 fg=Some(Yellow) bg=Some(Reset) add=BOLD sub=NONE text="src"
y=01 x=08..11 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text=" 0/1"
y=01 x=41..57 fg=Some(Yellow) bg=Some(Reset) add=BOLD sub=NONE text="src/app.rs  +2 -1"
y=02 x=01..02 fg=Some(Reset) bg=Some(DarkGray) add=BOLD sub=NONE text="  "
y=02 x=03..03 fg=Some(Green) bg=Some(DarkGray) add=BOLD sub=NONE text="•"
y=02 x=04..04 fg=Some(Reset) bg=Some(DarkGray) add=BOLD sub=NONE text=" "
y=02 x=05..07 fg=Some(Cyan) bg=Some(DarkGray) add=BOLD sub=NONE text="mod"
y=02 x=08..08 fg=Some(Reset) bg=Some(DarkGray) add=BOLD sub=NONE text=" "
y=02 x=09..12 fg=Some(Magenta) bg=Some(DarkGray) add=BOLD sub=NONE text="    "
y=02 x=13..18 fg=Some(White) bg=Some(DarkGray) add=BOLD sub=NONE text="app.rs"
y=02 x=19..38 fg=Some(Reset) bg=Some(DarkGray) add=BOLD sub=NONE text="                    "
y=02 x=41..55 fg=Some(Blue) bg=Some(Reset) add=BOLD sub=NONE text="@@ -1,4 +1,5 @@"
y=03 x=41..41 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=03 x=42..45 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   1"
y=03 x=47..47 fg=Some(Gray) bg=Some(Reset) add=NONE sub=NONE text=" "
y=03 x=49..59 fg=Some(Gray) bg=Some(Reset) add=NONE sub=NONE text="fn main() {"
y=04 x=41..41 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text="|"
y=04 x=42..45 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   2"
y=04 x=47..47 fg=Some(Red) bg=Some(Blue) add=NONE sub=NONE text="-"
y=04 x=49..58 fg=Some(Red) bg=Some(Blue) add=NONE sub=NONE text="    old();"
y=05 x=41..41 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text="|"
y=05 x=42..45 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   2"
y=05 x=47..47 fg=Some(Green) bg=Some(DarkGray) add=BOLD sub=NONE text="+"
y=05 x=49..58 fg=Some(Green) bg=Some(DarkGray) add=BOLD sub=NONE text="    new();"
y=06 x=41..41 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=06 x=42..45 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   3"
y=06 x=47..47 fg=Some(Green) bg=Some(Reset) add=NONE sub=NONE text="+"
y=06 x=49..60 fg=Some(Green) bg=Some(Reset) add=NONE sub=NONE text="    extra();"
y=07 x=41..41 fg=Some(Yellow) bg=Some(Reset) add=NONE sub=NONE text=" "
y=07 x=42..45 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="   4"
y=07 x=47..47 fg=Some(Gray) bg=Some(Reset) add=NONE sub=NONE text=" "
y=07 x=49..49 fg=Some(Gray) bg=Some(Reset) add=NONE sub=NONE text="}"
y=12 x=00..79 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="1 files (0/1 viewed, 0 generated/noisy), +2/-1, 0 comments                      "
y=13 x=00..79 fg=Some(DarkGray) bg=Some(Reset) add=NONE sub=NONE text="trunk()..@ · focus diff (range active) · j/k line · r range · ctrl-g cancel · t/"
