src/snapshots/jj_change_viewer__tui__tests__tui_snapshot_target_chooser.snap
---
source: src/tui.rs
assertion_line: 1804
expression: "render_tui_text(&session, &mode, 100, 24)"
---
┌files─────────────────────────────────────┐┌diff──────────────────────────────────────────────────┐
│No changed files                          ││No changed files                                      │
│                                          ││                                                      │
│Try t for trunk, p for parent, b for      ││Current target: trunk()..@                            │
│target ┌target────────────────────────────────────────────────────────────────────────────┐       │
│--base/│Choose base for base..@ (tip is @)                                                │r, or  │
│       │filter: type to fuzzy match                                                       │       │
│       │  change id      bookmarks                 description                            │re     │
│       │   abc123       main                      feat: first change                      │       │
│       │›● def456       feature*                  fix: selected change                    │       │
│       │                                                                                  │       │
│       │type fuzzy filter · backspace edit · ↑/↓ or ctrl-j/ctrl-k move · enter use base · │       │
│       │esc cancel                                                                        │       │
│       │                                                                                  │       │
│       │                                                                                  │       │
│       │                                                                                  │       │
│       │                                                                                  │       │
│       │                                                                                  │       │
│       │                                                                                  │       │
│       └──────────────────────────────────────────────────────────────────────────────────┘       │
│                                          ││                                                      │
└──────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
0 files (0/0 viewed, 0 generated/noisy), +0/-0, 0 comments
choose base for base..@ · type filter · down/up move · enter load · esc cancel
